# language_confident_challenge_ml_engineer

./: .dockerignore  .gitignore  README.md  compute_cache.py  constants.py  data_exploration.ipynb  data_objects.py  dataset.py  dataset2.py  experiment.py  main.py  pyproject.toml  requirements.txt  test.py  train.py  train_distill_model.py  train_distill_with_optuna.py  train_simple_vit.py  train_with_optuna.py
.devcontainer/: Dockerfile  devcontainer.json
datasets/: base_dataset.py  distill_dataloader.py  mel_spec_dataset.py  prebuild_dataset.py  sc_dataset.py  simple_dataloader.py  torch_lightling_datamodule.py
lightling_wrapper/: __init__.py  data_module.py  train_module.py
models/: bc_resnet.py  lightling_wrapper.py  mobile_vit.py  new_conv.py  simple_conv.py  torch_lightling_train_module.py  vit_transformer.py
models/bc_resnet/: bc_resnet_model.py  mel_spec_dataset.py
models/simple_conv/: base_dataset.py  logit_dataset.py  simple_conv_model.py
tests/: test_dataset.py  test_models.py
tests/test_simple_conv/: test_logit_dataset.py
utils/: model_utils.py  visualize_utils.py
