[tool.poetry]
name = "language_confident_challenge_ml_engineer"
version = "0.1.0"
description = ""
authors = ["egochao <johnoldmanworkspace@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.12.1"
torchaudio = "^0.12.1"
sklearn = "^0.0"
plotly = "^5.9.0"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
librosa = "^0.9.2"
jupyter = "^1.0.0"
notebook = "^6.4.12"
tqdm = "^4.64.0"
torchmetrics = "^0.9.3"
wandb = "^0.13.1"
transformers = "^4.21.1"
vit-pytorch = "^0.35.8"
pytorch-lightning = "^1.7.1"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
